--- a/index.html
+++ b/index.html
@@ -24,18 +24,10 @@
         <div class="header-nav">
             <div class="header-nav__item">
                 <div class="header-nav-item__elem">
-                    <img class="icons" src="images/in.png" alt="main-sheet">
+                    <img class="icons" src="images/table.png" alt="main-sheet">
                 </div>
                 <div class="header-nav-item__elem header-desc">
                     <a href="index.html">Главная</a>
-                </div>
-            </div>
-            <div class="header-nav__item">
-                <div class="header-nav-item__elem">
-                    <img class="icons" src="images/table.png" alt="table">
-                </div>
-                <div class="header-nav-item__elem header-desc">
-                    <a href="lessons.html">О занятиях</a>
                 </div>
             </div>
             <div class="header-nav__item">
@@ -60,6 +52,14 @@
                 </div>
                 <div class="header-nav-item__elem header-desc">
                     <a href="contacts.html">Контакты</a>
+                </div>
+            </div>
+            <div class="header-nav__item">
+                <div class="header-nav-item__elem">
+                    <img class="icons" src="images/in.png" alt="into">
+                </div>
+                <div class="header-nav-item__elem header-desc">
+                    <a href="in.html">Войти</a>
                 </div>
             </div>
         </div>
