--- a/in.html
+++ b/in.html
@@ -28,6 +28,17 @@
             </div>
             <div class = "task-items">
             </div>
+            <div class="load__tasks">
+                <button id="load__tasks__button" onclick="loadFromJson()">Загрузить данные</button>
+            </div>
+            <div class="preloader">
+                <div id="preloader__image">
+                </div>
+            </div>
+            <div class="error">
+                <div id="error__image">
+                </div>
+            </div>
         </div>
     </div>
 </div>
