--- a/programs.html
+++ b/programs.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <title>FC-Направления</title>
-    <link href="/web-3-sem/contacts.css" rel="stylesheet">
+    <link rel="stylesheet" type=“text/css” href="contacts.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts/programs-script.js"></script>
     <meta charset="UTF-8">
